<resources>
    <string name="app_name">Project Manager</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="please_wait">Please wait....</string>
    <string name="enter_your_name_email_and_password_to_register_with_us">Enter your name, email and password to register with us</string>
    <string name="enter_your_email_and_password_to_sign_in">Enter your email and password to sign in</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="my_profile">My Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="update">UPDATE</string>
    <string name="create">CREATE</string>
    <string name="no_boards_to_show">No Boards to show</string>
    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>
    <string name="confirm_card_name">Confirm card name</string>
    <string name="enter_card_name">Enter card name</string>
    <string name="cancel_card_name_input">Cancel card name input</string>
    <string name="add_card_input">Add card input</string>
    <string name="add_card">Add card</string>
    <string name="task_card_list">Task card list</string>
    <string name="confirm_edited_task_list_name">Confirm edited task list name</string>
    <string name="edit_task_list_name">Edit task list name</string>
    <string name="cancel_editing_task_list_name">Cancel editing task list name</string>
    <string name="edit_task_list_input">Edit task list input</string>
    <string name="divider_line">Divider line</string>
    <string name="delete_task_list">Delete task list</string>
    <string name="task_list_title">Task list title</string>
    <string name="confirm_task_list_name">Confirm task list name</string>
    <string name="enter_task_list_name">Enter task list name</string>
    <string name="cancel_task_list_name_input">Cancel task list name input</string>
    <string name="task_list_input">Task list input</string>
    <string name="add_task_list">Add task list</string>
    <string name="members">Members</string>
    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>
    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete_card">Delete Card</string>
    <string name="str_select_label_color">Select Label Color</string>
    <string name="str_select_member">Select Member</string>
    <string name="default_notification_channel_id">ProjectManager_notification_channel_id</string>
</resources>